# simple-mod-scanner

./: .gitignore  LICENSE  README.md  install.bat  pyproject.toml  run.bat
src/beamng_mod_scanner/: __init__.py  __main__.py  app.py  models.py  scanner.py
src/beamng_mod_scanner/detectors/: dangerous_files.py  script_patterns.py  structure.py
src/simple_mod_scanner/: __init__.py  __main__.py  app.py  models.py  scanner.py  zip_reader.py
src/simple_mod_scanner/detectors/: __init__.py  dangerous_files.py  script_patterns.py  structure.py
tests/: generate_fixtures.py  test_scanner.py
