[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beamng-mod-scanner"
version = "1.0.0"
description = "Scan BeamNG.drive mod ZIP files for malware and suspicious code without extracting them."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "rod-dor" }]
keywords = ["beamng", "mod", "scanner", "malware", "security", "lua"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = [
  "customtkinter>=5.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
beamng-mod-scanner = "beamng_mod_scanner.__main__:main"

[project.urls]
Homepage = "https://github.com/rod-dor/beamng-mod-scanner"
Repository = "https://github.com/rod-dor/beamng-mod-scanner"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
